--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -18,14 +18,9 @@
       <a ui-sref="signup()" id="login-button6" class="button button-positive button-block button-outline">Don't have an account? Sign Up</a>
       <a ui-sref="recover()" id="login-button8" class="button button-dark button-block button-clear">Forgot your password?</a>
     </form>
-    <form id="login-form225" class="list">
-      <div id="login-markdown360" class="show-list-numbers-and-dots">
-        <p style="color:#AAAAAA;font-size:11px;">---------------------------------------------------- OR ----------------------------------------------------</p>
-      </div>
-    </form>
     <form id="login-form227" class="list">
-      <button id="login-button163" ng-click="getOAuthCode()" class="button button-royal button-block">Login with Facebook</button>
-      <div class="spacer" style="width: 480px; height: 50px;"></div>
+      <button id="login-button163" ng-click="getOAuthCode()" class="button button-royal button-block icon-left ion-social-facebook">Login with Facebook</button>
+      <div class="spacer" style="width: 480px; height: 10px;"></div>
     </form>
     <form id="login-form226" class="list">
       <div id="login-markdown359" style="text-align:center;" class="show-list-numbers-and-dots">
