Support login via google

--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -19,7 +19,8 @@
       <a ui-sref="recover()" id="login-button8" class="button button-dark button-block button-clear">Forgot your password?</a>
     </form>
     <form id="login-form227" class="list">
-      <button id="login-button163" ng-click="getOAuthCode()" class="button button-royal button-block icon-left ion-social-facebook">Login with Facebook</button>
+      <button id="login-button163" ng-click="getOAuthCode(&quot;Facebook&quot;)" class="button button-royal button-block icon-left ion-social-facebook">Login with Facebook</button>
+      <button id="login-button157" ng-click="getOAuthCode(&quot;Google&quot;)" class="button button-energized button-block icon-left ion-social-google">Login with Google</button>
       <div class="spacer" style="width: 480px; height: 10px;"></div>
     </form>
     <form id="login-form226" class="list">
