--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -15,12 +15,11 @@
         </label>
       </ion-list>
       <button id="login-button5" ng-click="submit()" class="button button-positive button-block">Login</button>
-      <a ui-sref="signup()" id="login-button6" class="button button-positive button-block button-outline">Don't have an account? Sign Up</a>
+      <a ui-sref="signup()" id="login-button6" class="button button-dark button-block button-clear">Don't have an account? Sign Up</a>
       <a ui-sref="recover()" id="login-button8" class="button button-dark button-block button-clear">Forgot your password?</a>
     </form>
     <form id="login-form227" class="list">
-      <button id="login-button163" ng-click="getOAuthCode(&quot;Facebook&quot;)" class="button button-royal button-block icon-left ion-social-facebook">Login with Facebook</button>
-      <button id="login-button157" ng-click="getOAuthCode(&quot;Google&quot;)" class="button button-energized button-block icon-left ion-social-google">Login with Google</button>
+      <button id="login-button157" ng-click="getOAuthCode()" class="button button-positive button-block button-outline icon-left ion-cloud">Login with your social account</button>
       <div class="spacer" style="width: 480px; height: 10px;"></div>
     </form>
     <form id="login-form226" class="list">
