Display name instead of usename in menu header

--- a/webapp/src/ionicapp/www/templates/login.html
+++ b/webapp/src/ionicapp/www/templates/login.html
@@ -14,12 +14,12 @@
           <input type="password" placeholder="" ng-model="data.password">
         </label>
       </ion-list>
-      <button id="login-button5" ng-click="submit()" class="button button-positive button-block">Login</button>
-      <a ui-sref="signup()" id="login-button6" class="button button-dark button-block button-clear">Don't have an account? Sign Up</a>
-      <a ui-sref="recover()" id="login-button8" class="button button-dark button-block button-clear">Forgot your password?</a>
+      <button id="login-button5" ng-click="submit()" ng-disabled="oauthorization_code != null" class="button button-positive button-block">Login</button>
+      <a ui-sref="signup()" id="login-button6" ng-disabled="oauthorization_code != null" class="button button-dark button-block button-clear">Don't have an account? Sign Up</a>
+      <a ui-sref="recover()" id="login-button8" ng-disabled="oauthorization_code != null" class="button button-dark button-block button-clear">Forgot your password?</a>
     </form>
     <form id="login-form227" class="list">
-      <button id="login-button157" ng-click="getOAuthCode()" class="button button-positive button-block button-outline icon-left ion-cloud">Login with your social account</button>
+      <button id="login-button157" ng-click="getOAuthCode()" ng-disabled="oauthorization_code != null" class="button button-positive button-block button-outline icon-left ion-cloud">Login with your social account</button>
       <div class="spacer" style="width: 480px; height: 10px;"></div>
     </form>
     <form id="login-form226" class="list">
