--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -13,7 +13,7 @@
       <div class="spacer" style="width: 268px; height: 34px;"></div>
       <div id="menu-markdown8" style="text-align:center;" class="show-list-numbers-and-dots">
         <p style="color:#FFFFFF;font-size:17px;">
-          <strong> {{ data.username }} </strong>
+          <strong> {{ data.name }} </strong>
         </p>
       </div>
       <ion-list id="menu-list1" class="manual-list-fullwidth">
