Supported moving of markers and getting/setting multiple markers for multiple devices

--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -30,7 +30,7 @@
         <input type="number" placeholder="" ng-model="refresh_time" ng-disabled="refresh_automatically">
       </label>
       <ion-toggle toggle-class="toggle-positive" id="sensorDashboard-toggle14" ng-model="refresh_automatically" ng-change="changeRefresh(refresh_automatically, refresh_time)" class="widget_button_half_50">Refresh automatically</ion-toggle>
-      <button id="sensorDashboard-button126" ng-click="submitDelete()" class="button button-dark button-block button-outline">Reset values</button>
+      <button id="sensorDashboard-button126" ng-click="submitDelete()" class="button button-positive button-block button-outline">Reset values</button>
     </form>
     <div id="sensorDashboard-markdown311" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ sensors_counthdr }}</p>
