Fixed bouncing issue on View Device Location page

--- a/webapp/src/ionicapp/www/templates/viewDeviceLocation.html
+++ b/webapp/src/ionicapp/www/templates/viewDeviceLocation.html
@@ -5,7 +5,7 @@
   <ion-nav-buttons side="right" class="has-header">
     <button class="button button-positive icon ion-refresh" ng-click="getDeviceLocation(data.devicename)"></button>
   </ion-nav-buttons>
-  <ion-content padding="true" class="has-header">
+  <ion-content padding="true" class="has-header" has-bouncing=“false”>
     <div class="spacer" style="height: 12px;"></div>
     <div id="viewDeviceLocation-markdown314" style="text-align:center;" class="show-list-numbers-and-dots">
       <p style="color:#387EF5;font-size:18px;">
