Supported deleting device/s location/s

--- a/webapp/src/ionicapp/www/templates/viewDeviceLocation.html
+++ b/webapp/src/ionicapp/www/templates/viewDeviceLocation.html
@@ -34,6 +34,7 @@
     </form>
     <form id="viewDeviceLocation-form228" class="list">
       <button id="viewDeviceLocation-button152" ng-click="setDeviceLocation(data.devicename)" class="button button-positive button-block">Set device location</button>
+      <button id="viewDeviceLocation-button155" ng-click="deleteDeviceLocation(data.devicename)" class="button button-positive button-block button-outline">Delete device location</button>
     </form>
     <ui-gmap-google-map ng-if="map.center" center="map.center" zoom="map.zoom" options="map.options" style="height:500px;">
 
