--- a/webapp/src/ionicapp/www/templates/order.html
+++ b/webapp/src/ionicapp/www/templates/order.html
@@ -18,5 +18,9 @@
 
       <p style="color:#AAAAAA;font-size:12px;">pass: BrtIoTPortal</p>
     </div>
+    <div class="spacer" style="width: 747.778px; height: 30px;"></div>
+    <div id="order-markdown345" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#444444;">{{ notice }}</p>
+    </div>
   </ion-content>
 </ion-view>
