Supported Login via phone number
- User can now login using email or phone_number so the username parameter for LOGIN API can be either an email or phone_number
- When username is a phone_number,
  - It must be unique for all users
    Signing up with an already registered phone number will now fail
    Saving user info using an already registered phone number will now fail
    Verifying a phone number with an already registered phone number will now fail
  - It must start with '+'
  - It must be verified first via OTP

--- a/webapp/src/ionicapp/www/templates/changePassword.html
+++ b/webapp/src/ionicapp/www/templates/changePassword.html
@@ -21,7 +21,7 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="changePassword-button40" ng-click="submit()" class="button button-positive button-block">SAVE</button>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="changePassword-button41" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
+      <button id="changePassword-button41" ng-click="submitCancel()" class="button button-dark button-small button-block button-clear">Cancel</button>
     </form>
     <div id="changePassword-container9" class="spinner6 creator-container"></div>
   </ion-content>
