--- a/webapp/src/ionicapp/www/templates/signup.html
+++ b/webapp/src/ionicapp/www/templates/signup.html
@@ -34,7 +34,7 @@
         </p>
       </div>
       <div class="spacer" style="width: 300px; height: 35px;"></div>
-      <a ui-sref="login()" id="signup-button9" class="button button-dark button-block button-clear">Already have an account? Sign In</a>
+      <a ui-sref="login()" id="signup-button9" class="button button-dark button-small button-block button-clear">Already have an account? Sign In</a>
       <div id="signup-container4" class="spinner3 creator-container"></div>
     </form>
   </ion-content>
