--- a/webapp/src/ionicapp/www/templates/recover.html
+++ b/webapp/src/ionicapp/www/templates/recover.html
@@ -4,7 +4,7 @@
     <h3 id="recover-heading7" style="color:#444444;text-align:center;">Forgot password</h3>
     <div class="spacer" style="height: 10px;"></div>
     <div id="recover-markdown32" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">Enter the email address you signed up with.</p>
+      <p style="color:#000000;">Enter your email address</p>
     </div>
     <form id="recover-form10" class="list">
       <ion-list id="recover-list5">
@@ -16,7 +16,7 @@
       <div class="spacer" style="height: 10px;"></div>
       <button id="recover-button11" ng-click="submit()" class="button button-positive button-block">RESET PASSWORD</button>
       <div class="spacer" style="height: 10px;"></div>
-      <button id="recover-button12" ng-click="submitCancel()" class="button button-positive button-small button-block button-clear">Cancel</button>
+      <button id="recover-button12" ng-click="submitCancel()" class="button button-dark button-small button-block button-clear">Cancel</button>
     </form>
     <div id="recover-container6" class="spinner5 creator-container"></div>
   </ion-content>
