Supported OTA for device fleet

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -4,6 +4,15 @@ $dark: #444444;
 $link-color: $dark;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "../www/lib/ionic/scss";
+table, th, td {
+	border-collapse: collapse;
+	padding: 12px;
+	text-align: center;
+	border-bottom: 1px solid #ddd;
+	color: #444444;
+	font-size: 16px;
+}
+
 .img_logo {
 	top: 35%;
 }
