--- a/webapp/src/ionicapp/www/templates/potentiometer.html
+++ b/webapp/src/ionicapp/www/templates/potentiometer.html
@@ -118,9 +118,22 @@
         <span class="input-label"></span>
         <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename"></select>
       </label>
+      <ion-checkbox id="potentiometer-checkbox52" ng-model="data.attributes.notification.endpoints.storage.enable">Send to storage</ion-checkbox>
+      <div id="potentiometer-container16" ng-show="data.attributes.notification.endpoints.storage.recipients != &quot;&quot;" class="tab_margin_1">
+        <div>
+          <br>
+          <p>
+            <a href="https://ft900-iot-portal.s3.amazonaws.com/{{ data.attributes.notification.endpoints.storage.recipients }}">
+              Storage URL
+            </a>
+          </p>
+          <br>
+        </div>
+      </div>
     </form>
     <form id="potentiometer-form91" class="list">
       <button id="potentiometer-button88" ng-click="submit()" class="button button-positive button-block">{{ data.sensor.subclass ? "DONE" : "SAVE" }}</button>
+      <div class="spacer" style="height: 100px;"></div>
     </form>
   </ion-content>
 </ion-view>
