Supported filtering of sensors in sensor dashboarding
- user can now display sensors from different devices via the 3 filters
  devicename, device peripheral and sensor class

--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -21,6 +21,10 @@ table, th, td {
 	background-color: #387EF5;
 }
 
+.card_middle {
+	background-color: #387EF5;
+}
+
 .tab_margin_1 {
 	margin-left: 1em;
 }
