--- a/webapp/src/ionicapp/www/css/ionic.app.css
+++ b/webapp/src/ionicapp/www/css/ionic.app.css
@@ -9813,6 +9813,9 @@ table, th, td {
 .card_top {
   background-color: #387EF5; }
 
+.card_middle {
+  background-color: #387EF5; }
+
 .tab_margin_1 {
   margin-left: 1em; }
 
