--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -3,7 +3,7 @@
     <button class="button button-icon icon ion-android-close" ng-click="submitExit()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right" class="has-header">
-    <button class="button button-positive icon ion-refresh" ng-click="submitQuery()"></button>
+    <button class="button button-positive icon ion-refresh" ng-click="submitRefresh()"></button>
   </ion-nav-buttons>
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
@@ -17,68 +17,57 @@
       <ion-toggle toggle-class="toggle-positive" id="sensorDashboard-toggle35" ng-model="hide_settings" ng-change="changeHideSettings(hide_settings)">.</ion-toggle>
     </form>
     <form id="sensorDashboard-form168" class="list" ng-show="!hide_settings">
-      <div id="sensorDashboard-button-bar12" class="button-bar">
-        <button id="sensorDashboard-button114" ng-class="{'active': data.activeSection==2}" ng-click="changeSection(2)" class="button button-positive button-small button-block">Charts</button>
-        <button id="sensorDashboard-button101" ng-class="{'active': data.activeSection==1}" ng-click="changeSection(1)" class="button button-positive button-small button-block">Values</button>
+      <div id="sensorDashboard-markdown413" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Sensor Filter</p>
       </div>
-      <label class="item item-select" id="sensorDashboard-select98">
+      <label class="item item-select widget_button_third" id="sensorDashboard-select98">
         <span class="input-label">Device</span>
-        <select ng-options="device.devicename as device.devicename for device in devices" ng-model="data.devicename" ng-change="changeDevice(data.devicename)"></select>
+        <select ng-options="device.devicename as device.devicename for device in devices" ng-model="data.devicename" ng-change="changeDevice(data.devicename)" ng-disabled="refresh_automatically"></select>
       </label>
+      <label class="item item-select widget_button_third" id="sensorDashboard-select109">
+        <span class="input-label">Peripheral</span>
+        <select ng-options="peripheral for peripheral in peripherals" ng-model="peripheral" ng-change="changePeripheral(peripheral)" ng-disabled="refresh_automatically"></select>
+      </label>
+      <label class="item item-select widget_button_third" id="sensorDashboard-select110">
+        <span class="input-label">Sensor Class</span>
+        <select ng-options="sensorclass for sensorclass in sensorclasses" ng-model="sensorclass" ng-change="changeSensorClass(sensorclass)" ng-disabled="refresh_automatically"></select>
+      </label>
+      <div class="spacer" style="width: 747.778px; height: 15px;"></div>
+      <div id="sensorDashboard-markdown443" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Dashboard Settings</p>
+      </div>
       <label class="item item-input item-stacked-label widget_button_half_50" id="sensorDashboard-input144">
         <span class="input-label">Refresh time (sec)</span>
         <input type="number" placeholder="" ng-model="refresh_time" ng-disabled="refresh_automatically">
       </label>
       <ion-toggle toggle-class="toggle-positive" id="sensorDashboard-toggle14" ng-model="refresh_automatically" ng-change="changeRefresh(refresh_automatically, refresh_time)" class="widget_button_half_50">Refresh automatically</ion-toggle>
-      <button id="sensorDashboard-button126" ng-click="submitDelete()" class="button button-positive button-block button-outline">Reset values</button>
+      <button id="sensorDashboard-button126" ng-click="submitDelete()" ng-disabled="refresh_automatically" class="button button-positive button-block button-outline">Reset values</button>
     </form>
     <div id="sensorDashboard-markdown311" class="show-list-numbers-and-dots">
       <p style="color:#AAAAAA;font-size:12px;">{{ sensors_counthdr }}</p>
     </div>
-    <div class="list card" id="sensorDashboard-card25" ng-repeat="sensor in sensors" ng-show="data.activeSection==1">
-      <div class="item item-body card_top" id="sensorDashboard-list-item-container29">
-        <div id="sensorDashboard-markdown434" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#FFFFFF;font-size:18px;">
-            <strong>{{ sensor.sensorname }}</strong>
-          </p>
-        </div>
-        <div id="sensorDashboard-markdown435" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
-        </div>
-        <div id="sensorDashboard-markdown436" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.subclass ? sensor.source.toUpperCase() + "" + sensor.number + " " + sensor.class.toUpperCase() + " | " + sensor.subclass.toUpperCase() : sensor.source.toUpperCase() + "" + sensor.number + " " + sensor.class.toUpperCase() }}</p>
-        </div>
-      </div>
-      <div class="item item-body" id="sensorDashboard-list-item-container30" ng-click="submitQuery()">
-        <div id="sensorDashboard-markdown438" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">.</p>
-        </div>
-        <div id="sensorDashboard-markdown441" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:35px;">
-            <strong> {{ sensor.subclass ? sensor.readings.value + " " + sensor.units[0] + " | " + sensor.readings.subclass.value + " " + sensor.units[1] : sensor.readings.value + " " + sensor.units[0] }} </strong>
-          </p>
-        </div>
-        <div id="sensorDashboard-markdown439" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">.</p>
-        </div>
-        <div id="sensorDashboard-markdown440" style="text-align:center;" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:10px;">{{ sensor.subclass ? "Low: " + sensor.readings.lowest + " " + sensor.units[0] + " High: " + sensor.readings.highest + " " + sensor.units[0] + " | " + "Low: " + sensor.readings.subclass.lowest + " " + sensor.units[1] + " High: " + sensor.readings.subclass.highest
-            + " " + sensor.units[1] : "Low: " + sensor.readings.lowest + " " + sensor.units[0] + " High: " + sensor.readings.highest + " " + sensor.units[0] }}</p>
-        </div>
-      </div>
-    </div>
-    <div class="list card" id="sensorDashboard-card28" ng-repeat="sensor in sensors" ng-show="data.activeSection==2" ng-click="submitQuery()">
+    <div class="list card" id="sensorDashboard-card28" ng-repeat="sensor in sensors" ng-click="submitQuery()">
       <div class="item item-body card_top" id="sensorDashboard-list-item-container19">
         <div id="sensorDashboard-markdown295" class="show-list-numbers-and-dots">
           <p style="margin-top:0px;color:#FFFFFF;font-size:18px;">
             <strong>{{ sensor.sensorname }}</strong>
           </p>
         </div>
-        <div id="sensorDashboard-markdown305" class="show-list-numbers-and-dots">
+        <div id="sensorDashboard-markdown305" class="show-list-numbers-and-dots widget_button_half">
           <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.manufacturer }} - {{ sensor.model }}</p>
         </div>
-        <div id="sensorDashboard-markdown310" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.subclass ? sensor.source.toUpperCase() + "" + sensor.number + " " + sensor.class.toUpperCase() + " | " + sensor.subclass.toUpperCase() : sensor.source.toUpperCase() + "" + sensor.number + " " + sensor.class.toUpperCase() }}</p>
+        <div id="sensorDashboard-markdown459" style="text-align:right;" class="show-list-numbers-and-dots widget_button_half">
+          <p style="margin-top:0px;color:#FFFFFF;font-size:32px;">
+            <strong> {{ sensor.subclass ? sensor.readings.value + " " + sensor.units[0] + " | " + sensor.readings.subclass.value + " " + sensor.units[1] : sensor.readings.value + " " + sensor.units[0] }} </strong>
+          </p>
+        </div>
+        <div id="sensorDashboard-markdown310" class="show-list-numbers-and-dots widget_button_half">
+          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.subclass ? sensor.devicename + " - " + sensor.source.toUpperCase() + "" + sensor.number + " " + sensor.class.toUpperCase() + " | " + sensor.subclass.toUpperCase() : sensor.devicename + " - " + sensor.source.toUpperCase() + "" + sensor.number
+            + " " + sensor.class.toUpperCase() }}</p>
+        </div>
+        <div id="sensorDashboard-markdown458" style="text-align:right;" class="show-list-numbers-and-dots widget_button_half">
+          <p style="margin-top:0px;color:#FFFFFF;font-size:10px;">{{ sensor.subclass ? "Low: " + sensor.readings.lowest + " " + sensor.units[0] + " High: " + sensor.readings.highest + " " + sensor.units[0] + " | " + "Low: " + sensor.readings.subclass.lowest + " " + sensor.units[1] + " High: " + sensor.readings.subclass.highest
+            + " " + sensor.units[1] : "Low: " + sensor.readings.lowest + " " + sensor.units[0] + " High: " + sensor.readings.highest + " " + sensor.units[0] }}</p>
         </div>
       </div>
       <div id="canvas-holder" style="width:97%; margin:0px 0px 0px 3%;">
